--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a:hover {
   <h1>Korn Noname</h1>
   <p>❤️️ รักวาวาน้า ❤️️</p>
   <a href="https://www.facebook.com/alongkorn.saeaui/">Facebook</a>
-  <a href="https://instagram.com">Instagram</a>
+  <a href="https://www.instagram.com/_.alongkxrn?igsh=MXExc3E0N2hxY2doOA==">Instagram</a>
 </div>
 
 <script>
@@ -155,3 +155,4 @@ document.addEventListener('mousemove', e => {
 
 </body>
 </html>
+
