--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<title>Korn Noname - Glow Static Edition</title>
+<title>Korn Noname - Pink Liquid Cursor</title>
 <style>
 body {
   font-family: 'Comic Sans MS', cursive;
@@ -12,9 +12,9 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: linear-gradient(270deg, #ff00cc, #3333ff, #00ffcc, #ffff00);
-  background-size: 800% 800%;
-  animation: bgMove 10s infinite alternate ease-in-out;
+  background: linear-gradient(270deg, #ffb6c1, #ff69b4, #ff1493);
+  background-size: 600% 600%;
+  animation: bgMove 8s infinite alternate ease-in-out;
   cursor: none;
 }
 
@@ -23,34 +23,42 @@ body {
   100% { background-position: 100% 50%; }
 }
 
-.cursor {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background: radial-gradient(circle, rgba(255,255,255,0.9), transparent 70%);
-  pointer-events: none;
+/* ตัวเม้าท์แบบของเหลว */
+.cursor-liquid {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.9), rgba(255,192,203,0.6), rgba(255,182,193,0.1));
   border-radius: 50%;
-  mix-blend-mode: difference;
-  filter: blur(4px);
-  transform: translate(-50%, -50%);
+  backdrop-filter: blur(8px) saturate(180%);
+  box-shadow: 0 0 25px rgba(255,192,203,0.7);
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(1);
+  mix-blend-mode: screen;
+  transition: transform 0.25s ease-out, background 0.3s;
   z-index: 1000;
 }
 
+.cursor-liquid.active {
+  transform: translate(-50%, -50%) scale(1.4);
+  box-shadow: 0 0 35px rgba(255,182,193,0.9);
+}
+
 .card {
-  background: linear-gradient(45deg, #ffffffaa, #ff66ccaa);
-  border: 5px solid #000;
-  width: 350px;
+  background: linear-gradient(45deg, rgba(255,255,255,0.95), rgba(255,182,193,0.9));
+  border: 4px solid #ff69b4;
+  width: 360px;
   border-radius: 25px;
   text-align: center;
-  box-shadow: 0 0 40px 10px #ff00ff, 0 0 60px 20px #00ffff;
+  box-shadow: 0 0 40px 10px #ff69b4, 0 0 60px 20px #ffb6c1;
   position: relative;
   backdrop-filter: blur(10px);
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .card:hover {
   transform: scale(1.05);
-  box-shadow: 0 0 60px 15px #ff00ff, 0 0 80px 25px #00ffff;
+  box-shadow: 0 0 60px 15px #ff66b2, 0 0 90px 25px #ffb6c1;
 }
 
 img {
@@ -59,35 +67,36 @@ img {
   border-radius: 50%;
   object-fit: cover;
   margin-top: 20px;
-  border: 5px dashed #ff00ff;
-  box-shadow: 0 0 20px #fff, 0 0 40px #0ff;
-  animation: pulse 1.5s infinite;
+  border: 4px solid #ff99cc;
+  box-shadow: 0 0 25px #ffb6c1;
+  animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
-  0%, 100% { transform: scale(1); filter: hue-rotate(0deg); }
-  50% { transform: scale(1.2); filter: hue-rotate(180deg); }
+  0%, 100% { transform: scale(1); box-shadow: 0 0 25px #ffb6c1; }
+  50% { transform: scale(1.1); box-shadow: 0 0 40px #ff66b2; }
 }
 
 h1 {
   font-size: 28px;
-  color: #ff00ff;
-  text-shadow: 2px 2px 8px #00ffff;
+  color: #ff1a8c;
+  text-shadow: 2px 2px 10px #ffcce0;
   animation: glowText 2s infinite alternate;
 }
 
 @keyframes glowText {
-  from { text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff; }
-  to { text-shadow: 0 0 30px #00ffff, 0 0 50px #ff00ff; }
+  from { text-shadow: 0 0 10px #ff99cc, 0 0 20px #ff66b2; }
+  to { text-shadow: 0 0 25px #ff1a8c, 0 0 40px #ff66b2; }
 }
 
 p {
-  color: #222;
+  color: #ff1a8c;
   font-weight: bold;
-  background: linear-gradient(45deg, #ff00ff, #00ffff, #ffff00);
+  font-size: 15px;
+  background: linear-gradient(45deg, #ff99cc, #ff66b2, #ff3385);
   -webkit-background-clip: text;
   color: transparent;
-  animation: rainbow 2s infinite linear;
+  animation: rainbow 3s infinite linear;
 }
 
 @keyframes rainbow {
@@ -101,11 +110,11 @@ a {
   border-radius: 20px;
   font-weight: bold;
   text-decoration: none;
-  color: #fff;
-  background: linear-gradient(90deg, #ff00ff, #ff6600, #ffff00, #00ff00, #00ffff, #0000ff);
-  background-size: 400% 400%;
-  animation: colorShift 3s infinite linear;
-  box-shadow: 0 0 20px #fff;
+  color: white;
+  background: linear-gradient(90deg, #ff80bf, #ff4da6, #ff1a8c);
+  background-size: 300% 300%;
+  animation: colorShift 4s infinite linear;
+  box-shadow: 0 0 20px #ff66b2;
 }
 
 @keyframes colorShift {
@@ -114,45 +123,33 @@ a {
 }
 
 a:hover {
-  transform: scale(1.3) rotate(5deg);
-  box-shadow: 0 0 30px #0ff, 0 0 60px #ff0;
+  transform: scale(1.2);
+  box-shadow: 0 0 30px #fff, 0 0 60px #ffb6c1;
 }
 </style>
 </head>
 <body>
 
-<div class="cursor" id="cursor"></div>
+<div class="cursor-liquid" id="cursor"></div>
 
 <div class="card">
   <img src="https://i.postimg.cc/zB5qhZys/IMG-20260108-104835-107.webp" alt="Profile Picture">
   <h1>Korn Noname</h1>
-  <p>❤️️ รักวาวาน้า ❤️️</p>
+  <p>❤️️ รักวาวาที่สุดเลยย ❤️️</p>
   <a href="https://www.facebook.com/alongkorn.saeaui/">Facebook</a>
-  <a href="https://www.instagram.com/_.alongkxrn?igsh=MXExc3E0N2hxY2doOA==">Instagram</a>
+  <a href="https://instagram.com">Instagram</a>
 </div>
 
 <script>
 const cursor = document.getElementById('cursor');
 document.addEventListener('mousemove', e => {
-  cursor.style.left = e.pageX + 'px';
-  cursor.style.top = e.pageY + 'px';
-
-  const sparkle = document.createElement('div');
-  sparkle.style.position = 'absolute';
-  sparkle.style.left = e.pageX + 'px';
-  sparkle.style.top = e.pageY + 'px';
-  sparkle.style.width = '10px';
-  sparkle.style.height = '10px';
-  sparkle.style.borderRadius = '50%';
-  sparkle.style.background = `hsl(${Math.random() * 360}, 100%, 70%)`;
-  sparkle.style.pointerEvents = 'none';
-  sparkle.style.boxShadow = '0 0 20px white';
-  sparkle.style.zIndex = 999;
-  document.body.appendChild(sparkle);
-  setTimeout(() => sparkle.remove(), 600);
+  cursor.style.left = e.clientX + 'px';
+  cursor.style.top = e.clientY + 'px';
 });
+
+document.addEventListener('mousedown', () => cursor.classList.add('active'));
+document.addEventListener('mouseup', () => cursor.classList.remove('active'));
 </script>
 
 </body>
 </html>
-
