--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ a:hover {
 <div class="card">
   <img src="https://i.postimg.cc/zB5qhZys/IMG-20260108-104835-107.webp" alt="Profile Picture">
   <h1>Korn Noname</h1>
-  <p>❤️️ รักวาวาที่สุดเลยย ❤️️</p>
+  <p>❤️️ ทักมานะค้าบที่รัก ❤️️</p>
   <a href="https://www.facebook.com/alongkorn.saeaui/">Facebook</a>
   <a href="https://instagram.com">Instagram</a>
 </div>
@@ -156,4 +156,5 @@ document.addEventListener('mouseup', () => cursor.classList.remove('active'));
 
 </body>
 </html>
+
 
